# ffmpeg_camera_streamer

./: Makefile.am  Makefile.in  README  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
conf/: wangyonglin.conf
src/application/: Makefile.am  Makefile.in
src/application/include/FFMPEG/: AVCameraSkeletons.h  AVContentSkeletons.h  AVFilterSkeletons.h  AVRTMPSkeletons.h
src/application/include/USBCamera/: AVCameraHelpers.h  AVEffectHelpers.h  AVManagerHelpers.h  AVOutputHelpers.h  AVStreamHelpers.h
src/application/include/httpd/: config.h
src/application/src/: main.c
src/application/src/FFMPEG/: AVCameraSkeletons.c  AVContentSkeletons.c  AVFilterSkeletons.c  AVRTMPSkeletons.c
src/application/src/USBCamera/: AVCameraHelpers.c  AVEffectHelpers.c  AVManagerHelpers.c  AVOutputHelpers.c  AVStreamHelpers.c
src/application/src/httpd/: httpd.c
src/linuxos/: Makefile.am  Makefile.in
src/linuxos/include/cronolog/: cronoutils.h
src/linuxos/include/linuxos/: config.h  daemonize.h  log.h  string.h  types.h
src/linuxos/src/cronolog/: cronolog.c  cronotest.c  cronoutils.c
src/linuxos/src/linuxos/: config.c  daemonize.c  log.c  string.c
src/wangyonglin/: Makefile.am  Makefile.in
src/wangyonglin/include/Blackliner/: Autowired.h  Blackliner.h  Configuring.h  EventTrigger.h  KVTailq.h  Logger.h  Skeletons.h  String.h  Unix_timestamp_converter.h
src/wangyonglin/include/HTTPSClient/: HTTPSClient.h  HTTPSRequest.h
src/wangyonglin/include/Helpers/: Allocate.h  EventTrigger.h  KVTailq.h  String.h  Unix_timestamp_converter.h
src/wangyonglin/include/OpenSSL/: Headers.h  base64.h
src/wangyonglin/include/SnowFlake/: IdGenerator.h  SnowFlake.h  SnowWorkerM1.h  SnowWorkerM2.h
src/wangyonglin/include/WangYonglin/: Headers.h  Skeletons.h
src/wangyonglin/include/cJSON/: cJSON_Utils.h
src/wangyonglin/src/Blackliner/: Autowired.c  Configuring.c  EventTrigger.c  KVTailq.c  Logger.c  Skeletons.c  String.c  Unix_timestamp_converter.c
src/wangyonglin/src/HTTPSClient/: HTTPSClient.c  HTTPSRequest.c  hostcheck.c  openssl_hostname_validation.c
src/wangyonglin/src/Helpers/: Allocate.c  EventTrigger.c  KVTailq.c  String.c  Unix_timestamp_converter.c
src/wangyonglin/src/OpenSSL/: base64.c
src/wangyonglin/src/SnowFlake/: IdGenOptions.c  IdGenerator.c  SnowFlake.c  SnowWorkerM1.c  SnowWorkerM2.c
src/wangyonglin/src/WangYonglin/: Skeletons.c
src/wangyonglin/src/cJSON/: cJSON.c  cJSON_Utils.c
